@@ -1,4 +1,4 @@
-// Copyright 2016 The Nomulus Authors. All Rights Reserved.
+// Copyright 2017 The Nomulus Authors. All Rights Reserved.
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -33,7 +33,7 @@ import java.util.HashMap;
 import java.util.Map;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
-/** Container class to create and run remote commands against a datastore instance. */
+/** Container class to create and run remote commands against a Datastore instance. */
 @Parameters(separators = " =", commandDescription = "Command-line interface to the registry")
 final class RegistryCli {
 
@@ -42,9 +42,16 @@ final class RegistryCli {
       description = "Sets the default environment to run the command.")
   private RegistryToolEnvironment environment = RegistryToolEnvironment.PRODUCTION;
 
+  @Parameter(
+      names = {"-c", "--commands"},
+      description = "Returns all command names.")
+  private boolean showAllCommands;
+
   // Do not make this final - compile-time constant inlining may interfere with JCommander.
   @ParametersDelegate
-  private AppEngineConnection connection = new AppEngineConnection();
+  private AppEngineConnectionFlags appEngineConnectionFlags =
+      new AppEngineConnectionFlags();
+
 
   // Do not make this final - compile-time constant inlining may interfere with JCommander.
   @ParametersDelegate
@@ -72,7 +79,7 @@ final class RegistryCli {
     commandInstances.put("help", helpCommand);
 
     for (Map.Entry<String, ? extends Class<? extends Command>> entry : commands.entrySet()) {
-      Command command = entry.getValue().newInstance();
+      Command command = entry.getValue().getDeclaredConstructor().newInstance();
       jcommander.addCommand(entry.getKey(), command);
       commandInstances.put(entry.getKey(), command);
     }
@@ -94,6 +101,13 @@ final class RegistryCli {
       throw e;
     }
 
+    if (showAllCommands) {
+      for (Map.Entry<String, ? extends Class<? extends Command>> entry : commands.entrySet()) {
+        System.out.println(entry.getKey());
+      }
+      return;
+    }
+
     checkState(RegistryToolEnvironment.get() == environment,
         "RegistryToolEnvironment argument pre-processing kludge failed.");
 
@@ -103,12 +117,32 @@ final class RegistryCli {
       return;
     }
     loggingParams.configureLogging();  // Must be called after parameters are parsed.
-    injectReflectively(RegistryToolComponent.class, DaggerRegistryToolComponent.create(), command);
+
+    try {
+      runCommand(command);
+    } catch (AuthModule.LoginRequiredException ex) {
+      System.err.println("===================================================================");
+      System.err.println("You must login using 'nomulus login' prior to running this command.");
+      System.err.println("===================================================================");
+    }
+  }
+
+  private void runCommand(Command command) throws Exception {
+    // Create the main component and use it to inject the command class.
+    RegistryToolComponent component = DaggerRegistryToolComponent.builder()
+        .flagsModule(new AppEngineConnectionFlags.FlagsModule(appEngineConnectionFlags))
+        .build();
+    injectReflectively(RegistryToolComponent.class, component, command);
 
     if (!(command instanceof RemoteApiCommand)) {
+      // TODO(mmuller): this should be in the try/catch LoginRequiredException in case future
+      // commands use our credential.
       command.run();
       return;
     }
+
+    // Get the App Engine connection, advise the user if they are not currently logged in..
+    AppEngineConnection connection = component.appEngineConnection();
 
     if (command instanceof ServerSideCommand) {
       ((ServerSideCommand) command).setConnection(connection);
@@ -117,7 +151,7 @@ final class RegistryCli {
     // RemoteApiCommands need to have the remote api installed to work.
     RemoteApiInstaller installer = new RemoteApiInstaller();
     RemoteApiOptions options = new RemoteApiOptions();
-    options.server(connection.getServer().getHostText(), connection.getServer().getPort());
+    options.server(connection.getServer().getHost(), connection.getServer().getPort());
     if (connection.isLocalhost()) {
       // Use dev credentials for localhost.
       options.useDevelopmentServerCredential();
